[Blacklist] Fix the ugly scrollbars

--- a/src/css/modules/_blacklist-ui.scss
+++ b/src/css/modules/_blacklist-ui.scss
@@ -27,6 +27,7 @@ blacklist-ui {
         display: block;
         max-height: 50vh;
         overflow: visible auto;
+        @include scrollbars;
 
         filter {
             display: list-item;
